added li to hp and pird photo to bird page

--- a/views/birds.hbs
+++ b/views/birds.hbs
@@ -1,5 +1,7 @@
 <h1>This is the {{title}} page</h1>
 
+<img class="lead-photo" src="https://loremflickr.com/750/450/bird" alt="">
+
 <p>
 	Special orders welcomed. If we currently do not have the parrot you are looking for we can order.
 </p>  
