--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,11 @@
-
-<div id="front_banner">
-	<div id="banner_text">
-		<h1>Welcome to Exotic Birds of Denver</h1>
-		<p>Exotic Birds of Denver is your one-stop shop for all your parrot needs! Exotic Birds of Denver is more than a shop, it’s an Exotic paradise!</p>
+<div>
+	<div>
+		<ol>
+			<li><h1>Welcome to Exotic Birds of Denver</h1><p>Exotic Birds of Denver is your one-stop shop for all your parrot needs! Exotic Birds of Denver is more than ashop, it’s an Exotic paradise!</p></li>
+			<li><p>Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socializewith each other and you!</p></li>
+			<li><p>We specialize in hand-fed and hand-raised parrots.</p></li>
+			<li><p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p></li>
+			<li><p>We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”)</p></li>
+		</ol>
 	</div>
 </div>
-
-<p>Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socialize with each other and you!</p>
-<p>We specialize in hand-fed and hand-raised parrots.</p>
-<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food and supplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
-<p>We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka “Birdman!”)</p>
