--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,17 +3,41 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/bulma.min.css">
   </head>
   <body>
-    <nav>
-      <ul id="nav_links">
-        <li><a href="/">Home</a></li>
-        <li><a href="/birds">Birds</a></li>
-        <li><a href="/products">Products</a></li>
-        <li><a href="/services">Services</a></li>
-        <li><a href="/contact-us">Contact</a></li>
-      </ul>
+    <!-- Navbar start -->
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          <h1>Exotic Birds of Denver</h1>
+        </a>
+    
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+    
+      <div id="navbarBasicExample" class="navbar-menu">
+        <!-- Navbar-start: appears on the left -->
+        <div class="navbar-start">
+          <!-- each item here should be in an anchor tag and have the class "navbar-item" -->
+          <a class="navbar-item" href="/birds">Birds</a>
+          <a class="navbar-item" href="/products">Products</a>
+          <a class="navbar-item" href="/services">Services</a>
+        </div>
+    
+        <!-- Navbar-end: appears on the right -->
+        <div class="navbar-end">
+          <div class="navbar-item">
+          <a class="navbar-item" href="/contact-us">Contact Us</a>
+          </div>
+        </div>
+      </div>
     </nav>
+    <!-- Navbar end -->
     {{{body}}}
 
     <footer>
