--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="/stylesheets/bulma.min.css">
+    <link rel='stylesheet' href='/stylesheets/mystyles.css' />
   </head>
   <body>
     <!-- Navbar start -->
