added photo header to home and updated contact form

--- a/public/stylesheets/Sass/mystyles.scss
+++ b/public/stylesheets/Sass/mystyles.scss
@@ -1,2 +1,6 @@
 @charset "utf-8";
+@import 'parts/mixins';
+@import 'parts/variables';
+@import 'parts/home';
+
 @import "../../../node_modules/bulma/bulma.sass";
