--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,38 @@
-<div>
-	<div>
-		<ol>
-			<li><h1>Welcome to Exotic Birds of Denver</h1><p>Exotic Birds of Denver is your one-stop shop for all your parrot needs! Exotic Birds of Denver is more than ashop, it’s an Exotic paradise!</p></li>
-			<li><p>Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socializewith each other and you!</p></li>
-			<li><p>We specialize in hand-fed and hand-raised parrots.</p></li>
-			<li><p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p></li>
-			<li><p>We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”)</p></li>
-		</ol>
+<section class="hero is-primary">
+	<div class="hero-body is-bold">
+		<div class="container">
+			<h1 class="title">
+				Welcome to Exotic Birds of Denver!
+			</h1>
+			<h2 class="subtitle">
+				Exotic Birds of Denver is your one-stop shop for all your parrot needs!
+			</h2>
+		</div>
 	</div>
-</div>
+</section>
+<div class="photo-header"></div>
+<section class="section">
+	<div class="container is-fluid">
+		<div class="notification">
+			<ol>
+				<li>Exotic Birds of Denver is more than ashop, it’s
+					an Exotic paradise!</li>
+	
+				<li>
+					<p>Experience our large flight room where our parrots are un-caged and are allowed to freely interact and
+						socializewith each other and you!</p>
+				</li>
+				<li>
+					<p>We specialize in hand-fed and hand-raised parrots.</p>
+				</li>
+				<li>
+					<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food
+						andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+				</li>
+				<li>
+					<p>We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”)</p>
+				</li>
+			</ol>
+		</div>
+	</div>
+</section>
