--- a/public/stylesheets/mystyles.css
+++ b/public/stylesheets/mystyles.css
@@ -1,3 +1,13 @@
+.photo-header {
+  background-image: linear-gradient(#5ba900, rgba(91, 169, 0, 0)), url("/public/images/no-rights/jungle.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: scroll;
+  width: 100vw;
+  height: 30vh; }
+
 /*! bulma.io v0.7.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -678,13 +688,13 @@ a.has-text-dark:hover, a.has-text-dark:focus {
   background-color: #363636 !important; }
 
 .has-text-primary {
-  color: #00d1b2 !important; }
+  color: #5BA900 !important; }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #009e86 !important; }
+  color: #407600 !important; }
 
 .has-background-primary {
-  background-color: #00d1b2 !important; }
+  background-color: #5BA900 !important; }
 
 .has-text-link {
   color: #3273dc !important; }
@@ -1400,60 +1410,60 @@ a.box:active {
         box-shadow: none;
         color: whitesmoke; }
   .button.is-primary {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     border-color: transparent;
     color: #fff; }
     .button.is-primary:hover, .button.is-primary.is-hovered {
-      background-color: #00c4a7;
+      background-color: #549c00;
       border-color: transparent;
       color: #fff; }
     .button.is-primary:focus, .button.is-primary.is-focused {
       border-color: transparent;
       color: #fff; }
       .button.is-primary:focus:not(:active), .button.is-primary.is-focused:not(:active) {
-        box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25); }
+        box-shadow: 0 0 0 0.125em rgba(91, 169, 0, 0.25); }
     .button.is-primary:active, .button.is-primary.is-active {
-      background-color: #00b89c;
+      background-color: #4d9000;
       border-color: transparent;
       color: #fff; }
     .button.is-primary[disabled] {
-      background-color: #00d1b2;
+      background-color: #5BA900;
       border-color: transparent;
       box-shadow: none; }
     .button.is-primary.is-inverted {
       background-color: #fff;
-      color: #00d1b2; }
+      color: #5BA900; }
       .button.is-primary.is-inverted:hover {
         background-color: #f2f2f2; }
       .button.is-primary.is-inverted[disabled] {
         background-color: #fff;
         border-color: transparent;
         box-shadow: none;
-        color: #00d1b2; }
+        color: #5BA900; }
     .button.is-primary.is-loading::after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-primary.is-outlined {
       background-color: transparent;
-      border-color: #00d1b2;
-      color: #00d1b2; }
+      border-color: #5BA900;
+      color: #5BA900; }
       .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined:focus {
-        background-color: #00d1b2;
-        border-color: #00d1b2;
+        background-color: #5BA900;
+        border-color: #5BA900;
         color: #fff; }
       .button.is-primary.is-outlined.is-loading::after {
-        border-color: transparent transparent #00d1b2 #00d1b2 !important; }
+        border-color: transparent transparent #5BA900 #5BA900 !important; }
       .button.is-primary.is-outlined[disabled] {
         background-color: transparent;
-        border-color: #00d1b2;
+        border-color: #5BA900;
         box-shadow: none;
-        color: #00d1b2; }
+        color: #5BA900; }
     .button.is-primary.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #00d1b2; }
+        color: #5BA900; }
       .button.is-primary.is-inverted.is-outlined[disabled] {
         background-color: transparent;
         border-color: #fff;
@@ -2088,13 +2098,13 @@ a.box:active {
       box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25); }
   .input.is-primary,
   .textarea.is-primary {
-    border-color: #00d1b2; }
+    border-color: #5BA900; }
     .input.is-primary:focus, .input.is-primary.is-focused, .input.is-primary:active, .input.is-primary.is-active,
     .textarea.is-primary:focus,
     .textarea.is-primary.is-focused,
     .textarea.is-primary:active,
     .textarea.is-primary.is-active {
-      box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25); }
+      box-shadow: 0 0 0 0.125em rgba(91, 169, 0, 0.25); }
   .input.is-link,
   .textarea.is-link {
     border-color: #3273dc; }
@@ -2300,13 +2310,13 @@ a.box:active {
     .select.is-dark select:focus, .select.is-dark select.is-focused, .select.is-dark select:active, .select.is-dark select.is-active {
       box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25); }
   .select.is-primary:not(:hover)::after {
-    border-color: #00d1b2; }
+    border-color: #5BA900; }
   .select.is-primary select {
-    border-color: #00d1b2; }
+    border-color: #5BA900; }
     .select.is-primary select:hover, .select.is-primary select.is-hovered {
-      border-color: #00b89c; }
+      border-color: #4d9000; }
     .select.is-primary select:focus, .select.is-primary select.is-focused, .select.is-primary select:active, .select.is-primary select.is-active {
-      box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25); }
+      box-shadow: 0 0 0 0.125em rgba(91, 169, 0, 0.25); }
   .select.is-link:not(:hover)::after {
     border-color: #3273dc; }
   .select.is-link select {
@@ -2443,19 +2453,19 @@ a.box:active {
     border-color: transparent;
     color: whitesmoke; }
   .file.is-primary .file-cta {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     border-color: transparent;
     color: #fff; }
   .file.is-primary:hover .file-cta, .file.is-primary.is-hovered .file-cta {
-    background-color: #00c4a7;
+    background-color: #549c00;
     border-color: transparent;
     color: #fff; }
   .file.is-primary:focus .file-cta, .file.is-primary.is-focused .file-cta {
     border-color: transparent;
-    box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
+    box-shadow: 0 0 0.5em rgba(91, 169, 0, 0.25);
     color: #fff; }
   .file.is-primary:active .file-cta, .file.is-primary.is-active .file-cta {
-    background-color: #00b89c;
+    background-color: #4d9000;
     border-color: transparent;
     color: #fff; }
   .file.is-link .file-cta {
@@ -2685,7 +2695,7 @@ a.box:active {
   .help.is-dark {
     color: #363636; }
   .help.is-primary {
-    color: #00d1b2; }
+    color: #5BA900; }
   .help.is-link {
     color: #3273dc; }
   .help.is-info {
@@ -3018,7 +3028,7 @@ a.box:active {
     background-color: #363636;
     color: whitesmoke; }
   .notification.is-primary {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     color: #fff; }
   .notification.is-link {
     background-color: #3273dc;
@@ -3080,11 +3090,11 @@ a.box:active {
   .progress.is-dark::-ms-fill {
     background-color: #363636; }
   .progress.is-primary::-webkit-progress-value {
-    background-color: #00d1b2; }
+    background-color: #5BA900; }
   .progress.is-primary::-moz-progress-bar {
-    background-color: #00d1b2; }
+    background-color: #5BA900; }
   .progress.is-primary::-ms-fill {
-    background-color: #00d1b2; }
+    background-color: #5BA900; }
   .progress.is-link::-webkit-progress-value {
     background-color: #3273dc; }
   .progress.is-link::-moz-progress-bar {
@@ -3153,8 +3163,8 @@ a.box:active {
       color: whitesmoke; }
     .table td.is-primary,
     .table th.is-primary {
-      background-color: #00d1b2;
-      border-color: #00d1b2;
+      background-color: #5BA900;
+      border-color: #5BA900;
       color: #fff; }
     .table td.is-link,
     .table th.is-link {
@@ -3187,7 +3197,7 @@ a.box:active {
       width: 1%; }
     .table td.is-selected,
     .table th.is-selected {
-      background-color: #00d1b2;
+      background-color: #5BA900;
       color: #fff; }
       .table td.is-selected a,
       .table td.is-selected strong,
@@ -3198,7 +3208,7 @@ a.box:active {
     color: #363636;
     text-align: left; }
   .table tr.is-selected {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     color: #fff; }
     .table tr.is-selected a,
     .table tr.is-selected strong {
@@ -3306,7 +3316,7 @@ a.box:active {
     background-color: #363636;
     color: whitesmoke; }
   .tag:not(body).is-primary {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     color: #fff; }
   .tag:not(body).is-link {
     background-color: #3273dc;
@@ -3867,13 +3877,13 @@ a.list-item {
       border-color: #363636;
       color: #2a2a2a; }
   .message.is-primary {
-    background-color: #f5fffd; }
+    background-color: #fafff5; }
     .message.is-primary .message-header {
-      background-color: #00d1b2;
+      background-color: #5BA900;
       color: #fff; }
     .message.is-primary .message-body {
-      border-color: #00d1b2;
-      color: #021310; }
+      border-color: #5BA900;
+      color: #152502; }
   .message.is-link {
     background-color: #f6f9fe; }
     .message.is-link .message-header {
@@ -4194,7 +4204,7 @@ a.list-item {
         background-color: #363636;
         color: whitesmoke; } }
   .navbar.is-primary {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     color: #fff; }
     .navbar.is-primary .navbar-brand > .navbar-item,
     .navbar.is-primary .navbar-brand .navbar-link {
@@ -4202,7 +4212,7 @@ a.list-item {
     .navbar.is-primary .navbar-brand > a.navbar-item:hover, .navbar.is-primary .navbar-brand > a.navbar-item.is-active,
     .navbar.is-primary .navbar-brand .navbar-link:hover,
     .navbar.is-primary .navbar-brand .navbar-link.is-active {
-      background-color: #00b89c;
+      background-color: #4d9000;
       color: #fff; }
     .navbar.is-primary .navbar-brand .navbar-link::after {
       border-color: #fff; }
@@ -4221,17 +4231,17 @@ a.list-item {
       .navbar.is-primary .navbar-end > a.navbar-item.is-active,
       .navbar.is-primary .navbar-end .navbar-link:hover,
       .navbar.is-primary .navbar-end .navbar-link.is-active {
-        background-color: #00b89c;
+        background-color: #4d9000;
         color: #fff; }
       .navbar.is-primary .navbar-start .navbar-link::after,
       .navbar.is-primary .navbar-end .navbar-link::after {
         border-color: #fff; }
       .navbar.is-primary .navbar-item.has-dropdown:hover .navbar-link,
       .navbar.is-primary .navbar-item.has-dropdown.is-active .navbar-link {
-        background-color: #00b89c;
+        background-color: #4d9000;
         color: #fff; }
       .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-        background-color: #00d1b2;
+        background-color: #5BA900;
         color: #fff; } }
   .navbar.is-link {
     background-color: #3273dc;
@@ -6408,7 +6418,7 @@ label.panel-block {
         .hero.is-dark.is-bold .navbar-menu {
           background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%); } }
   .hero.is-primary {
-    background-color: #00d1b2;
+    background-color: #5BA900;
     color: #fff; }
     .hero.is-primary a:not(.button):not(.dropdown-item):not(.tag),
     .hero.is-primary strong {
@@ -6422,14 +6432,14 @@ label.panel-block {
         color: #fff; }
     @media screen and (max-width: 1087px) {
       .hero.is-primary .navbar-menu {
-        background-color: #00d1b2; } }
+        background-color: #5BA900; } }
     .hero.is-primary .navbar-item,
     .hero.is-primary .navbar-link {
       color: rgba(255, 255, 255, 0.7); }
     .hero.is-primary a.navbar-item:hover, .hero.is-primary a.navbar-item.is-active,
     .hero.is-primary .navbar-link:hover,
     .hero.is-primary .navbar-link.is-active {
-      background-color: #00b89c;
+      background-color: #4d9000;
       color: #fff; }
     .hero.is-primary .tabs a {
       color: #fff;
@@ -6445,12 +6455,12 @@ label.panel-block {
     .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #00d1b2; }
+      color: #5BA900; }
     .hero.is-primary.is-bold {
-      background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%); }
+      background-image: linear-gradient(141deg, #537600 0%, #5BA900 71%, #48c300 100%); }
       @media screen and (max-width: 768px) {
         .hero.is-primary.is-bold .navbar-menu {
-          background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%); } }
+          background-image: linear-gradient(141deg, #537600 0%, #5BA900 71%, #48c300 100%); } }
   .hero.is-link {
     background-color: #3273dc;
     color: #fff; }
@@ -6745,186 +6755,3 @@ label.panel-block {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
-
-.carousel {
-  position: relative;
-  overflow: hidden; }
-  .carousel .carousel-container {
-    width: 100%;
-    position: relative;
-    border: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    left: -100%;
-    transform: translateX(100%); }
-    .carousel .carousel-container .carousel-item {
-      display: block;
-      position: relative;
-      flex: 1 0 100%; }
-      .carousel .carousel-container .carousel-item.has-background .is-background {
-        object-fit: cover;
-        object-position: center center;
-        height: 100%;
-        width: 100%; }
-      .carousel .carousel-container .carousel-item .title {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: 1.5em;
-        margin: 0;
-        text-align: center;
-        background: rgba(255, 255, 255, 0.6);
-        font-size: 0.75rem; }
-  .carousel .carousel-navigation {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    pointer-events: none; }
-    .carousel .carousel-navigation .carousel-nav-left,
-    .carousel .carousel-navigation .carousel-nav-right {
-      padding: 1em;
-      pointer-events: auto; }
-    .carousel .carousel-navigation.is-centered {
-      justify-content: center; }
-    .carousel .carousel-navigation.is-overlay {
-      top: 50%;
-      transform: perspective(1px) translateY(-50%);
-      bottom: auto;
-      left: auto;
-      right: auto;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 99; }
-      .carousel .carousel-navigation.is-overlay .carousel-nav-left,
-      .carousel .carousel-navigation.is-overlay .carousel-nav-right {
-        height: 2.2em;
-        width: 2em;
-        background: rgba(255, 255, 255, 0.7);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #4a4a4a;
-        position: absolute;
-        left: 0; }
-        .carousel .carousel-navigation.is-overlay .carousel-nav-left:hover,
-        .carousel .carousel-navigation.is-overlay .carousel-nav-right:hover {
-          cursor: pointer; }
-      .carousel .carousel-navigation.is-overlay .carousel-nav-right {
-        left: auto;
-        right: 0; }
-  .carousel.is-reversing .carousel-container {
-    transform: translateX(-100%); }
-  .carousel[data-size]:not(.carousel-animate-fade) .carousel-container .carousel-item {
-    padding: 1em; }
-
-.hero.has-carousel {
-  position: relative; }
-  .hero.has-carousel + .hero-body,
-  .hero.has-carousel + .hero-head,
-  .hero.has-carousel + .hero-footer {
-    z-index: 1; }
-  .hero.has-carousel .hero-carousel {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: auto;
-    border: none;
-    margin: auto;
-    padding: 0;
-    z-index: 0; }
-    .hero.has-carousel .hero-carousel .carousel-container {
-      height: auto !important; }
-
-.hero-carousel {
-  position: relative;
-  overflow: hidden; }
-  .hero-carousel .carousel-container {
-    width: 100%;
-    position: relative;
-    border: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    left: -100%;
-    transform: translateX(100%); }
-    .hero-carousel .carousel-container .carousel-item {
-      display: block;
-      position: relative;
-      flex: 1 0 100%; }
-      .hero-carousel .carousel-container .carousel-item.has-background .is-background {
-        object-fit: cover;
-        object-position: center center;
-        height: 100%;
-        width: 100%; }
-      .hero-carousel .carousel-container .carousel-item .title {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: 1.5em;
-        margin: 0;
-        text-align: center;
-        background: rgba(255, 255, 255, 0.6);
-        font-size: 0.75rem; }
-  .hero-carousel .carousel-navigation {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    pointer-events: none; }
-    .hero-carousel .carousel-navigation .carousel-nav-left,
-    .hero-carousel .carousel-navigation .carousel-nav-right {
-      padding: 1em;
-      pointer-events: auto; }
-    .hero-carousel .carousel-navigation.is-centered {
-      justify-content: center; }
-    .hero-carousel .carousel-navigation.is-overlay {
-      top: 50%;
-      transform: perspective(1px) translateY(-50%);
-      bottom: auto;
-      left: auto;
-      right: auto;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 99; }
-      .hero-carousel .carousel-navigation.is-overlay .carousel-nav-left,
-      .hero-carousel .carousel-navigation.is-overlay .carousel-nav-right {
-        height: 2.2em;
-        width: 2em;
-        background: rgba(255, 255, 255, 0.7);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #4a4a4a;
-        position: absolute;
-        left: 0; }
-        .hero-carousel .carousel-navigation.is-overlay .carousel-nav-left:hover,
-        .hero-carousel .carousel-navigation.is-overlay .carousel-nav-right:hover {
-          cursor: pointer; }
-      .hero-carousel .carousel-navigation.is-overlay .carousel-nav-right {
-        left: auto;
-        right: 0; }
-  .hero-carousel.is-reversing .carousel-container {
-    transform: translateX(-100%); }
-
-.carousel.carousel-animate-slide.carousel-animated .carousel-container,
-.hero-carousel.carousel-animate-slide.carousel-animated .carousel-container {
-  transform: none !important;
-  transition: transform 0.5s ease-in-out; }
-
-.carousel.carousel-animate-fade .carousel-item,
-.hero-carousel.carousel-animate-fade .carousel-item {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: opacity 0.5s ease-in-out; }
-  .carousel.carousel-animate-fade .carousel-item.is-active,
-  .hero-carousel.carousel-animate-fade .carousel-item.is-active {
-    opacity: 1; }
-  .carousel.carousel-animate-fade .carousel-item:not(.is-active),
-  .hero-carousel.carousel-animate-fade .carousel-item:not(.is-active) {
-    opacity: 0; }
