--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- Navbar start -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
           <h1>Exotic Birds of Denver</h1>
@@ -39,12 +39,15 @@
     <!-- Navbar end -->
     {{{body}}}
 
-    <footer>
+    <footer class="footer">
+      <div class="content has-text-centered">
       <p>Come visit us!</p>
       <p>
         {{address}}
         {{phone-number}}
       </p>
+
+      </div>
     </footer>
   </body>
     <script type="text/javascript" src="/javascripts/scripts.js"></script>
