--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,4 @@
+{{!-- Hero section start --}}
 <section class="hero is-primary">
 	<div class="hero-body is-bold">
 		<div class="container">
@@ -10,29 +11,60 @@
 		</div>
 	</div>
 </section>
+{{!-- Hero Section End --}}
+
 <div class="photo-header"></div>
+
+{{!-- info section start --}}
+
 <section class="section">
-	<div class="container is-fluid">
-		<div class="notification">
-			<ol>
-				<li>Exotic Birds of Denver is more than ashop, it’s
-					an Exotic paradise!</li>
-	
-				<li>
-					<p>Experience our large flight room where our parrots are un-caged and are allowed to freely interact and
-						socializewith each other and you!</p>
-				</li>
-				<li>
-					<p>We specialize in hand-fed and hand-raised parrots.</p>
-				</li>
-				<li>
-					<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food
-						andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
-				</li>
-				<li>
-					<p>We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”)</p>
-				</li>
-			</ol>
+<div class="tile is-ancestor">
+	<div class="tile is-vertical is-8">
+		<div class="tile is-parent">
+			<article class="tile is-child box">
+				<!-- Put any content you want -->
+				<p class="title">We've Moved!</p>
+				<p>Come visit us at our brand new location just 1 mile south on Broadway.</p>
+			</article>
+		</div>
+		<div class="tile">
+			<div class="tile is-parent is-vertical">
+				<article class="tile is-child box">
+				<p class="title">One</p>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit fuga ullam cupiditate id eligendi odit et consequuntur, iusto iste! Ut molestias debitis, incidunt quibusdam ipsum voluptate id quidem rerum facere.</p>
+					<!-- Put any content you want -->
+				</article>
+				<article class="tile is-child box">
+					<!-- Put any content you want -->
+					<p class="title">Two</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit fuga ullam cupiditate id eligendi odit et
+						consequuntur, iusto iste! Ut molestias debitis, incidunt quibusdam ipsum voluptate id quidem rerum facere.</p>
+				</article>
+			</div>
 		</div>
 	</div>
+	<div class="tile is-parent">
+		<article class="tile is-child box notification is-primary">
+			<!-- Put any content you want -->
+			<p class="title">Why buy from us?</p>
+			<p class="subtitle">We specialize in hand-fed and hand-raised parrots.  Our birds are socialized with humans and birds alike to guarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
+			<p class="subtitle">Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food
+			andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+		</article>
+	</div>
+</div>
 </section>
+
+
+
+{{!-- 
+Exotic Birds of Denver is more than ashop, it’s an Exotic paradise!
+
+Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socializewith each other and you!
+
+We specialize in hand-fed and hand-raised parrots.
+
+Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food andsupplements. We are happy to recommend the appropriate products for your specific bird needs.
+
+We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”) 
+--}}
