imported data.json file and minor style updates

--- a/public/stylesheets/Sass/Parts/_variables.scss
+++ b/public/stylesheets/Sass/Parts/_variables.scss
@@ -1,6 +1,11 @@
 // site colors
 
-$primary: #A7C1A2; //alt #5BA900
-$success: #5BA900;
+// Greens  #5BA900  #A7C1A2  #92C156
+//gcc #016D74  #89827A  #DFDADB  #F1C94C  #91B32C
+
+$primary: #016D74;
+$success: #91B32C;
 $danger: #B52D53;
+$warning: #F1C94C;
+$background: #DFDADB;
 
