--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,53 +18,37 @@
 {{!-- info section start --}}
 
 <section class="section">
-<div class="tile is-ancestor">
-	<div class="tile is-vertical is-8">
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<!-- Put any content you want -->
-				<p class="title">We've Moved!</p>
-				<p>Come visit us at our brand new location just 1 mile south on Broadway.</p>
-			</article>
-		</div>
-		<div class="tile">
-			<div class="tile is-parent is-vertical">
-				<article class="tile is-child box">
-				<p class="title">One</p>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit fuga ullam cupiditate id eligendi odit et consequuntur, iusto iste! Ut molestias debitis, incidunt quibusdam ipsum voluptate id quidem rerum facere.</p>
-					<!-- Put any content you want -->
-				</article>
-				<article class="tile is-child box">
-					<!-- Put any content you want -->
-					<p class="title">Two</p>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit fuga ullam cupiditate id eligendi odit et
-						consequuntur, iusto iste! Ut molestias debitis, incidunt quibusdam ipsum voluptate id quidem rerum facere.</p>
-				</article>
-			</div>
+	<div class="container">
+		<div class="notification is-primary">
+			<p class="title">We've Moved!</p>
+			<p>Come visit us at our brand new location just 1 mile south on Broadway.</p>
 		</div>
 	</div>
-	<div class="tile is-parent">
-		<article class="tile is-child box notification is-primary">
-			<!-- Put any content you want -->
+	<div class="container">
+		<div class="notification is-success">
 			<p class="title">Why buy from us?</p>
-			<p class="subtitle">We specialize in hand-fed and hand-raised parrots.  Our birds are socialized with humans and birds alike to guarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
-			<p class="subtitle">Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food
-			andsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
-		</article>
+			<p class="">We specialize in hand-fed and hand-raised parrots. Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
+			<p class="">Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+		</div>
 	</div>
-</div>
+	<div class="container">
+		<div class="notification is-warning">
+			<p class="title">We support you even after you buy</p>
+			<p>We provide quality worry free boarding whenever needed along with professional grooming by Bird-man Dave.</p>
+		</div>
+	</div>
 </section>
 
-
-
-{{!-- 
+{{!--
 Exotic Birds of Denver is more than ashop, it’s an Exotic paradise!
 
-Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socializewith each other and you!
+Experience our large flight room where our parrots are un-caged and are allowed to freely interact and socializewith
+each other and you!
 
 We specialize in hand-fed and hand-raised parrots.
 
-Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food andsupplements. We are happy to recommend the appropriate products for your specific bird needs.
+Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys, food
+andsupplements. We are happy to recommend the appropriate products for your specific bird needs.
 
-We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”) 
+We provide quality worry free boarding whenever needed along with professional grooming by Dave. (aka“Birdman!”)
 --}}
