--- a/views/birds.hbs
+++ b/views/birds.hbs
@@ -1,6 +1,153 @@
-<h1>This is the {{title}} page</h1>
 
-<img class="lead-photo" src="https://loremflickr.com/750/450/bird" alt="">
+{{!-- Hero section start --}}
+<section class="hero is-primary">
+	<div class="hero-body is-bold">
+		<div class="container">
+			<h1 class="title">
+				Meet our flock
+			</h1>
+			<h2 class="subtitle">
+				We offer a large range of parrots from parrotlets to hyacinth macaw!
+			</h2>
+		</div>
+	</div>
+</section>
+{{!-- Hero Section End --}}
+{{!-- test start --}}
+
+
+	{{!-- {{#each json.birds}}
+	<p>{{name}}</p>
+	{{/each}} --}}
+{{!-- test end --}}
+
+{{!-- Bird section start--}}
+<div>
+	<table class="table is-fullwidth">
+		<thead>
+			<th>Name</th>
+			<th>Size</th>
+			<th>3</th>
+			<th>4</th>
+		</thead>
+		<tbody>
+			{{#each json.birds}}
+			<tr>
+				<td>{{name}}</td>
+				<td>{{size}}</td>
+				<td>{{lifespan}}</td>
+				<td>{{link}}</td>
+			</tr>
+			{{/each}}
+		</tbody>
+		<tfoot>
+
+		</tfoot>
+	</table>
+
+</div>
+
+
+<section class="section">
+	<div class="container">
+		<div class="tile is-ancestor">
+			<div class="tile is-parent">
+				<div class="tile is-child">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-left">
+									<figure class="image is-48x48">
+										<img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+									</figure>
+								</div>
+								<div class="media-content">
+									<p class="title is-4">John Smith</p>
+									<p class="subtitle is-6">@johnsmith</p>
+								</div>
+							</div>
+					
+							<div class="content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+								<a href="#">#css</a> <a href="#">#responsive</a>
+								<br>
+								<time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-child">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-left">
+									<figure class="image is-48x48">
+										<img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+									</figure>
+								</div>
+								<div class="media-content">
+									<p class="title is-4">John Smith</p>
+									<p class="subtitle is-6">@johnsmith</p>
+								</div>
+							</div>
+					
+							<div class="content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+								<a href="#">#css</a> <a href="#">#responsive</a>
+								<br>
+								<time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-child">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-left">
+									<figure class="image is-48x48">
+										<img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+									</figure>
+								</div>
+								<div class="media-content">
+									<p class="title is-4">John Smith</p>
+									<p class="subtitle is-6">@johnsmith</p>
+								</div>
+							</div>
+					
+							<div class="content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+								<a href="#">#css</a> <a href="#">#responsive</a>
+								<br>
+								<time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+{{!-- Bird section end --}}
 
 <p>
 	Special orders welcomed. If we currently do not have the parrot you are looking for we can order.
