--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,10 +1,69 @@
-<h1>This is the {{title}} page</h1>
+<section class="hero is-primary">
+	<div class="hero-body is-bold">
+		<div class="container">
+			<h1 class="title">
+				Products
+			</h1>
+			<h2 class="subtitle">
+				We have a wide-variety of products to help you care for your new feathery family member
+			</h2>
+		</div>
+	</div>
+</section>
 
-<p>We offer a wide variety of products from cages to food and toys</p>
-
-<ul>
-	<li>Cages</li>
-	<li>Stands</li>
-	<li>Food</li>
-	<li>Toys</li>
-</ul>
+<section class="section" id="cages">
+	<div class="hero is-primary">
+		<div class="hero-body is-bold">
+			<div class="container">
+				<h1 class="title">
+					Cages
+				</h1>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		Find a comfortable resting place for your bird to go every night.
+	</div>
+</section>
+<section class="section" id="stands">
+	<div class="hero is-primary">
+		<div class="hero-body is-bold">
+			<div class="container">
+				<h1 class="title">
+					Stands
+				</h1>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		Find a nice perch for your bird to hang out with you outside his cage.
+	</div>
+</section>
+<section class="section" id="food">
+	<div class="hero is-primary">
+		<div class="hero-body is-bold">
+			<div class="container">
+				<h1 class="title">
+					Food
+				</h1>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		Keep your bird healthy with the Birdman's top nutrition picks
+	</div>
+</section>
+<section class="section" id="Cages">
+	<div class="hero is-primary">
+		<div class="hero-body is-bold">
+			<div class="container">
+				<h1 class="title">
+					Cages
+				</h1>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		Find the right cage for your bird.
+	</div>
+</section>
