split json file, updated services page

--- a/views/birds.hbs
+++ b/views/birds.hbs
@@ -54,7 +54,7 @@
 			<th>More Info</th>
 		</thead>
 		<tbody>
-			{{#each json.birds}}
+			{{#each birdData.birds}}
 			<tr>
 				<td>{{name}}</td>
 				<td>{{size}}</td>
