--- a/views/birds.hbs
+++ b/views/birds.hbs
@@ -1,6 +1,6 @@
 
 {{!-- Hero section start --}}
-<section class="hero is-primary">
+<section class="hero is-primary birds-header is-large">
 	<div class="hero-body is-bold">
 		<div class="container">
 			<h1 class="title">
@@ -20,6 +20,8 @@
 {{!-- test end --}}
 
 {{!-- Bird section start--}}
+
+
 
 {{!-- bird secton general --}}
 <div class="section">
@@ -45,7 +47,7 @@
 			</div>
 		</div>
 	</div>
-<div>
+<div class="container">
 	<table class="table is-fullwidth">
 		<thead>
 			<th>Name</th>
