--- a/views/services.hbs
+++ b/views/services.hbs
@@ -1,4 +1,6 @@
-<section class="hero is-primary">
+
+{{!-- hero section start --}}
+<section class="hero is-primary services-header is-large">
 	<div class="hero-body is-bold">
 		<div class="container">
 			<h1 class="title">
@@ -10,7 +12,9 @@
 		</div>
 	</div>
 </section>
+{{!-- hero section end --}}
 
+{{!-- grooming section start --}}
 <section class="section" id="grooming">
 	<div class="hero is-primary">
 		<div class="hero-body is-bold">
@@ -47,6 +51,10 @@
 		</div>
 </section>
 
+{{!-- grooming section end --}}
+
+{{!-- boarding section start --}}
+
 <section class="section" id="boarding">
 	<div class="hero is-primary">
 		<div class="hero-body is-bold">
@@ -60,6 +68,8 @@
 	</div>
 	<div class="container notification">
 	<div class="content">
+
+		{{!-- boarding basics --}}
 	<div class="title is-4">Boarding Basics</div>
 			<ul>
 				<li>Boarding rates apply the day the Parrot is dropped off. (The next day fee starts at 11 am the preceding day.)</li>
@@ -96,3 +106,5 @@
 		</table>
 	</div>
 </section>
+
+{{!-- boarding section end --}}
