--- a/public/stylesheets/Sass/Parts/_mixins.scss
+++ b/public/stylesheets/Sass/Parts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin backImage($image, $color1: $primary, $grad1: 0, $color2: $primary, $grad2: .5, $scroll: scroll) {
+@mixin photoHeader($image, $color1: $primary, $grad1: 0, $color2: $primary, $grad2: .5, $bp: center) {
 	background-image:
 		linear-gradient(rgba($color1, $grad1), rgba(91, 169, 0, $grad2)),
 		url($image);
@@ -6,5 +6,8 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	background-attachment: $scroll;
+	background-attachment: fixed;
+	// width: 100vw;
+	// height: 50vh;
+	background-position: $bp;
 }
