--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 {{!-- Hero section start --}}
-<section class="hero is-primary">
+<section class="hero is-primary home-header is-fullheight-with-navbar">
 	<div class="hero-body is-bold">
 		<div class="container">
 			<h1 class="title">
@@ -13,7 +13,8 @@
 </section>
 {{!-- Hero Section End --}}
 
-<div class="photo-header"></div>
+{{!-- photo header --}}
+{{!-- <div class="home-header"></div> --}}
 
 {{!-- info section start --}}
 
