updated heroes, finished products, installed carousel and fa

--- a/public/stylesheets/Sass/mystyles.scss
+++ b/public/stylesheets/Sass/mystyles.scss
@@ -3,4 +3,6 @@
 @import 'parts/variables';
 @import 'parts/home';
 
+
 @import "../../../node_modules/bulma/bulma.sass";
+@import "../../../node_modules/bulma-carousel/dist/css/bulma-carousel.sass";
