--- a/views/birds.hbs
+++ b/views/birds.hbs
@@ -1,6 +1,6 @@
 
 {{!-- Hero section start --}}
-<section class="hero is-primary birds-header is-large">
+<section class="hero is-primary birds-header is-medium">
 	<div class="hero-body is-bold">
 		<div class="container">
 			<h1 class="title">
@@ -38,7 +38,7 @@
 {{!-- bird table --}}
 
 <section class="section">
-	<div class="hero is-primary">
+	<div class="hero is-primary birds-header">
 		<div class="hero-body is-bold">
 			<div class="container">
 				<h1 class="title">
