--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
 <head>
 	<title>{{title}}</title>
 	<link rel='stylesheet' href='/stylesheets/mystyles.css' />
-</head>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"></head>
 
 <body>
 	<!-- Navbar start -->
@@ -68,5 +68,13 @@
 	</footer>
 </body>
 <script type="text/javascript" src="/javascripts/scripts.js"></script>
+<script type="text/javascript" src="/javascripts/bulma-carousel.min.js"></script>
+<script>
+	document.addEventListener("DOMContentLoaded", function () {
+		var carousels = bulmaCarousel.attach();
+		console.log(carousels);
+	});
+
+</script>
 
 </html>
