--- a/views/services.hbs
+++ b/views/services.hbs
@@ -1,6 +1,6 @@
 
 {{!-- hero section start --}}
-<section class="hero is-primary services-header is-large">
+<section class="hero is-primary services-header is-medium">
 	<div class="hero-body is-bold">
 		<div class="container">
 			<h1 class="title">
@@ -16,7 +16,7 @@
 
 {{!-- grooming section start --}}
 <section class="section" id="grooming">
-	<div class="hero is-primary">
+	<div class="hero is-primary services-header">
 		<div class="hero-body is-bold">
 			<div class="container">
 				<h1 class="title">
@@ -50,13 +50,11 @@
 			</table>
 		</div>
 </section>
-
 {{!-- grooming section end --}}
 
 {{!-- boarding section start --}}
-
 <section class="section" id="boarding">
-	<div class="hero is-primary">
+	<div class="hero is-primary services-header">
 		<div class="hero-body is-bold">
 			<div class="container">
 				<h1 class="title">
@@ -69,7 +67,7 @@
 	<div class="container notification">
 	<div class="content">
 
-		{{!-- boarding basics --}}
+	{{!-- boarding basics --}}
 	<div class="title is-4">Boarding Basics</div>
 			<ul>
 				<li>Boarding rates apply the day the Parrot is dropped off. (The next day fee starts at 11 am the preceding day.)</li>
@@ -106,5 +104,4 @@
 		</table>
 	</div>
 </section>
-
 {{!-- boarding section end --}}
